samples/_failures_safe/1761318053_e29827_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86e1fab7.c: In function ‘main’:
./samples/SAFE/__tmp_86e1fab7.c:139:9: error: expected expression at end of input
  139 |         destroy_matrix(&
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_86e1fab7.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86e1fab7.c:139:9: error: expected declaration or statement at end of input
